# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  tests.yml
gendiff/: __init__.py  arg_parse.py  comparisons_builder.py  core.py  data_type.py  formatter_json.py  formatter_plain.py  formatter_stylish.py  gen_diff.py  generate_diff.py  parsing.py  utilities.py
gendiff/formatters/: formatter.py  formatter_json.py  formatter_plain.py  formatter_stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file5.yml  file6.yaml  output_file5_file6.txt  output_json_file5_file6.txt  output_plain_file5_file6.txt
