[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet python project lvl 2"
authors = ["MjH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
